--- a/index.html
+++ b/index.html
@@ -1,19 +1,78 @@
 <!doctype html>
 <html>
-<head>
-  <title>행복한 엄사모</title>
-  <meta charset="utf-8">
-</head>
+  <head>
+    <title>행복한 엄사모</title>
+    <meta charset="utf-8">
+    <style>
+      body{
+        margin:0px;
+      }
+      a {
+         color : black;
+         text-decoration: none;
+       }
+      h1 {
+        font-size: 45px;
+        text-align: center;
+        border-bottom: 1px black solid;
+        padding-bottom: 15px;
+        padding-top: 5px;
+        margin-top: 10px;
+        margin-bottom: 0px;
+      }
+      h2{
+        margin: 0px;
+        font-size: 25px;
+      }
+      ol {
+        border-right: 1px black solid;
+        width: 100px;
+        padding: 20px;
+        padding-top: 10px;
+        padding-right: 5px;
+        font-size: 18px;
+        margin-top: 0px;
+        margin-left: 8px;
+      }
+      p{
+        margin:1px;
+      }
+      .grid{
+        display:grid;
+        grid-template-columns: 150px 1fr;
+      }
+      div{
+        padding-left: 0px;
+        padding-top: 0px;
+      }
 
-<body>
-  <h1><a href="home.html"> HAPPY UM SA MO</a></h1>
-  <li><a href="info.html"> INFO</a><br></li>
-  <li><a href="price.html"> PRICE</a><br></li>
-  <li><a href="cs.html"> CS</a><br></li>
-  <h2>엄준호 [umjoonho]</h2>
-  엄준호는 우리들의 친구이기도 하지만 그와 동시에 <strong>우리들의 <u>천적</u>이기도 합니다.</strong><p>하지만 우리가 먼저 그를 자극하지만 않는다면 그도 우리에게 해가 될 만한 일을 벌이지는 않을 것입니다</p>
-  <img src="umjoon.jpg" width="300">
-  <br><a href="https://www.facebook.com/profile.php?id=100022673691708" title="클릭하면 facebook으로 이동합니다">엄준호의 공식 SNS계정 바로가기</a>
+    </style>
+  </head>
 
-</body>
+  <body>
+    <h1><a href="index.html" ><strong> HAPPY UM SA MO</strong></a></h1>
+    <div class="grid">
+
+          <ol>
+            <li><a href="info.html" > <strong>INFO</strong></a><br></li>
+            <li><a href="price.html"> <strong>PRICE</strong></a><br></li>
+            <li><a href="cs.html" ><strong> CS</strong></a><br></li>
+          </ol>
+          <div>
+          <br><h2>엄준호 [umjoonho]</h2>
+           <p>
+             <br>엄준호는 우리들의 친구이기도 하지만 그와 동시에 <strong>우리들의 <u>천적</u>이기도 합니다.</strong>
+             <br>하지만 우리가 먼저 그를 자극하지만 않는다면 그도 우리에게 해가 될 만한 일을 벌이지는 않을 것입니다.
+             <br>그리고, 우리회사는 이에 물음을 던졌습니다. <br>'어떻게 하면 더 싱싱하고 맛좋은 엄준호를 만나볼 수 있을까?'
+             <br>물음에 대한 해결책은 그다지 멀리 있진 않았지만 그것을 찾기까지에는 10년도 더한 시간이 들었습니다.
+           </p>
+           <p>
+             <br>하루평균 8시간에 달하는 연구시간을 엄준호에게 투자했고, 약 5천원 정도의 자원이 연구 도중 손실되었습니다.
+             <br>그렇게 연구를 시작한지 4년이 지날 즈음 드디어 저희 회사는 특제 기술 JUJUCUT™ 을 발명해냈습니다.
+             <br>JUJICUT™ 은 엄준호의 특정 부위를 절단하여 생산량을 늘려주고 소비자분들께 좀 더 좋은 사용후기를 도출해냈습니다.
+          <img src="umjoon.jpg" width="300">
+          <br><a href="https://www.facebook.com/profile.php?id=100022673691708" style="color:#fe558e" title="클릭하면 facebook으로 이동합니다">엄준호의 공식 SNS계정 바로가기</a>
+        </div>
+    </div>
+  </body>
 </html>
