--- a/cs.html
+++ b/cs.html
@@ -5,16 +5,76 @@
     <title>hello! this is cs!</title>
     <meta charset="utf-8">
     <style>
-      a { color : black;text-decoration: none;}
+      body{
+        margin:0px;
+      }
+      a {
+         color : black;
+         text-decoration: none;
+       }
+      h1 {
+        font-size: 45px;
+        text-align: center;
+        border-bottom: 1px black solid;
+        padding-bottom: 15px;
+        padding-top: 5px;
+        margin-top: 10px;
+        margin-bottom: 0px;
+      }
+      h2{
+        margin: 0px;
+        font-size: 25px;
+      }
+      .grid ol {
+        border-right: 1px black solid;
+        width: 100px;
+        padding: 20px;
+        padding-top: 10px;
+        padding-right: 5px;
+        font-size: 18px;
+        margin-top: 0px;
+        margin-left: 8px;
+      }
+      p{
+        margin:1px;
+      }
+      .grid{
+        display:grid;
+        grid-template-columns: 150px 1fr;
+      }
+      div{
+        padding-left: 0px;
+        padding-top: 0px;
+      }
+      #main {
+        padding-top: 10px;
+      }
+      #memo {
+        style=" resize:none ; "
+      }
+
     </style>
+
   </head>
 
   <body>
     <h1><a href="index.html"> HAPPY UM SA MO</a></h1>
-    <li><a href="info.html"> INFO</a><br></li>
-    <li><a href="price.html"> PRICE</a><br></li>
-    <li><a href="cs.html" style="color:red"> CS</a><br></li>
-    <p>문의를 원하신다면 아래 이메일을 통해 부탁드립니다
-    <br>kemu6954@gmail.com</p>
+    <div class="grid">
+      <ol>
+        <strong>
+          <li><a href="info.html"> INFO</a><br></li>
+          <li><a href="price.html"> PRICE</a><br></li>
+          <li><a href="cs.html" style="color:red"> CS</a><br></li>
+        </strong>
+      </ol>
+      <div id="main">
+        <strong><p>
+          문의를 원하신다면 아래 이메일을 통해 부탁드립니다
+          <br>kemu6954@gmail.com
+        </p></strong>
+
+          <textarea id="memo"></textarea>
+      </div>
+    </div>
   </body>
 </html>
