--- a/info.html
+++ b/info.html
@@ -4,21 +4,32 @@
   <head>
     <title>hello! this is info!</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
     <style>
-      a { color : black; text-decoration: none; text-align: center;}
+     body{
+       margin:0px;
+     }
     </style>
   </head>
 
   <body>
     <h1><a href="index.html"> HAPPY UM SA MO</a></h1>
-    <li><a href="info.html" style="color:red"> INFO</a><br></li>
-    <li><a href="price.html"> PRICE</a><br></li>
-    <li><a href="cs.html"> CS</a><br></li>
-    <h2>info for merchandise</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/qf2NkpgI6gg"
-     frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen></iframe>
-    <p>그간 우리가 엄준호를 사용하려면 오직 자연산 엄준호만을 이용했어야만 했습니다.<br> 하지만 저희 HAPPY UM SA MO는 특허된 JUJICUT™ 을 사용하여 소비자 분들께 좀 더 편리하고 쉬운 방식으로 엄준호를 접할 수 있도록 연구해냈습니다 !<br> 이제 고도로 진화된 혁신을 느껴보십시오! </p>
-    유의사항: 본 회사에서 생산되는 엄준호는 자연산이 아니며 간혹 반점, 상처등이 발견될 수 있으나 인체에 무해하니 안심하셔도 됩니다. 또한 엄준호 사용시 발생되는 불이익은 저희 회사에서 일절 책임지지 않으며 민,형사상의 소송을 청구하실 수 없습니다.
+    <div class="grid">
+        <ol>
+          <strong>
+          <li><a href="info.html" style="color:red"> INFO</a><br></li>
+          <li><a href="price.html"> PRICE</a><br></li>
+          <li><a href="cs.html"> CS</a><br></li>
+          </strong>
+        </ol>
+      <div>
+        <h2>info for merchandise</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/qf2NkpgI6gg"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+      <p>그간 우리가 엄준호를 사용하려면 오직 자연산 엄준호만을 이용했어야만 했습니다.<br> 하지만 저희 HAPPY UM SA MO는 특허된 JUJICUT™ 을 사용하여 소비자 분들께 좀 더 편리하고 쉬운 방식으로 엄준호를 접할 수 있도록 연구해냈습니다 !<br> 이제 고도로 진화된 혁신을 느껴보십시오! </p>
+      유의사항: 본 회사에서 생산되는 엄준호는 자연산이 아니며 간혹 반점, 상처등이 발견될 수 있으나 인체에 무해하니 안심하셔도 됩니다. 또한 엄준호 사용시 발생되는 불이익은 저희 회사에서 일절 책임지지 않으며 민,형사상의 소송을 청구하실 수 없습니다.
+      </div>
+    </div>
   </body>
 </html>
