--- a/price.html
+++ b/price.html
@@ -4,14 +4,70 @@
     <title>행복한 엄사모</title>
     <meta charset="utf-8">
     <style>
-      a { color : black;text-decoration: none;}
+
+          body{
+            margin:0px;
+          }
+          a {
+             color : black;
+             text-decoration: none;
+           }
+          h1 {
+            font-size: 45px;
+            text-align: center;
+            border-bottom: 1px black solid;
+            padding-bottom: 15px;
+            padding-top: 5px;
+            margin-top: 10px;
+            margin-bottom: 0px;
+          }
+          h2{
+            margin: 0px;
+            font-size: 25px;
+          }
+          ol {
+            border-right: 1px black solid;
+            width: 100px;
+            padding: 20px;
+            padding-top: 10px;
+            padding-right: 5px;
+            font-size: 18px;
+            margin-top: 0px;
+            margin-left: 8px;
+          }
+          p{
+            margin:1px;
+          }
+          .grid{
+            display:grid;
+            grid-template-columns: 150px 1fr;
+          }
+          div{
+            padding-left: 0px;
+            padding-top: 0px;
+          }
+          #passage{
+            padding-top: 5px;
+          }
+
     </style>
   </head>
 
   <body>
     <h1><a href="index.html"> HAPPY UM SA MO</a></h1>
-    <li><a href="info.html"> INFO</a><br></li>
-    <li><a href="price.html" style="color:red"> PRICE</a><br></li>
-    <li><a href="cs.html"> CS</a><br></li>
+    <div class="grid">
+      <strong>
+        <ol>
+          <li><a href="info.html"> INFO</a><br></li>
+          <li><a href="price.html" style="color:red"> PRICE</a><br></li>
+          <li><a href="cs.html"> CS</a><br></li>
+        </ol>
+      </strong>
+        <div id="passage">
+          <p>
+          <strong>현재 2021년 1월 7일을 기준으로 엄준호의 시세가격은 2만 5천 원 입니다 </strong>
+        </p>
+        </div>
+    </div>
   </body>
 </html>
